--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+Trabalho relacionado a disciplina de Sistemas Distribuídos do Curso Bacharelado em Ciência da Computação.
 
 INSTRUÇÕES DE COMO EXECUTAR CORRETAMENTE O CHAT RMI
 
